add api docs for subdivisions
